<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">firstApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="total">Your total is 0</string>
    <string name="add">Add one</string>
    <string name="test">This is a test</string>
    <string name="sub">Subtract one</string>
    <string name="turnOn">Radio On/Off</string>
    <string name="toggle">Toggle Radio</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="b3">Dont click me</string>

</resources>
