<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.one.firstapp.Main" >

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:layout_centerHorizontal="true"
        android:textSize="40sp" />


     <Button
         android:id="@+id/bAdd"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvDisplay"
         android:layout_centerHorizontal="true"
         android:onClick="addOne"
         android:text="@string/add"
         android:textSize="20sp" />
     
       <Button
         android:id="@+id/bSub"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/bAdd"
         android:layout_centerHorizontal="true"
         android:onClick="subOne"
         android:text="@string/sub"
         android:textSize="20sp" />
     
     <RadioButton
         android:id="@+id/radio"
         android:layout_height="50dp"
         android:layout_width="wrap_content"
         android:layout_below="@id/bSub"
         android:text="@string/turnOn"
         android:layout_centerHorizontal="true"
         android:clickable="false"
         />
     
     <Button
         android:id="@+id/radioButton"
         android:layout_below="@id/radio"
         android:text="@string/toggle"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_centerHorizontal="true"
         android:onClick="radioClicked"
         />
     
     <Button
         android:id="@+id/button3"
         android:layout_below="@id/radioButton"
         android:text="@string/b3"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:clickable="true"
         android:layout_centerHorizontal="true"
         />

</RelativeLayout>
